# openstack

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
src/: config.rs  error.rs  main.rs
src/metrics/: collector.rs  kafka_producer.rs  mod.rs
src/ml/: engine.rs  mod.rs  models.rs  predictor.rs
src/openstack/: auth.rs  client.rs  mod.rs  services.rs
src/scheduler/: mod.rs  placement.rs  resource_scheduler.rs  sla_manager.rs
src/web/: dashboard.rs  mod.rs  websocket.rs
static/: dashboard.html
