[package]
name = "openstack"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
tonic = "0.10"
prost = "0.12"
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
dashmap = "5.5"
arc-swap = "1.6"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
